--- a/UIWidgetTest/app/src/main/res/layout/activity_main.xml
+++ b/UIWidgetTest/app/src/main/res/layout/activity_main.xml
@@ -26,5 +26,16 @@
         android:hint="Type something here"
         android:maxLines="1"/>
 
+    <ImageView
+        android:id="@+id/image_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/img_1" />
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
 
 </LinearLayout>
